# stilish

./: .gitignore  ChangeLog.md  PLAN.md  PROPOSAL.md  README.md  stilish.cabal
src/: Main.hs
src/Data/: BoundingBox.hs
src/Data/Tree/: Zipper.hs
src/Stilish/: IPC.hs  Tiling.hs
test/: Main.hs
