name:                stilish
version:             0.1.0.0
-- synopsis:            
-- description:         
homepage:            https://github.com/slakkenhuis/stilish
license:             GPL-3
license-file:        LICENSE
author:              ns@slak.ws
maintainer:          ns@slak.ws
category:            System
build-type:          Simple
extra-source-files:  ChangeLog.md, README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Data.BoundingBox
                     , Data.Tree.Zipper
                     , Stilish.Tiling
                     , Stilish.IPC
  build-depends:       base >=4.9 && <4.10
                     , network >=3.0 && <3.1
                     , bytestring >=0.10 && <0.11
                     , unix
                     , aeson
  default-language:    Haskell2010

executable stilish
  hs-source-dirs:      app
  main-is:             Main.hs
  build-depends:       base >=4.9 && <4.10
                     , stilish
                     , bytestring >=0.10 && <0.11
                     , optparse-applicative
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall -O2
  default-language:    Haskell2010

test-suite test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Main.hs
  build-depends:       base >= 4 && < 5
                     , stilish
                     , tasty >= 1.2
                     , tasty-hunit
                     , tasty-program
  default-language:    Haskell2010
